# OpenQudit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  todo.txt
.github/: test.py
crates/qudit-circuit/: Cargo.toml
crates/qudit-circuit/benches/: circuit_struct.rs  common.rs  compact_vec_bench.rs  tnvm.rs
crates/qudit-circuit/src/: circuit.rs  compact.rs  error.rs  lib.rs  point.rs
crates/qudit-circuit/src/circuit/: append.rs  collection.rs  construct.rs  dag.rs  evaluation.rs  grouping.rs  iteration.rs  mod.rs  properties.rs  python.rs  trait_impls.rs
crates/qudit-circuit/src/cycle/: cycle.rs  id.rs  list.rs  mod.rs
crates/qudit-circuit/src/instruction/: id.rs  instruction.rs  mod.rs  reference.rs
crates/qudit-circuit/src/iterator/: iterator.rs
crates/qudit-circuit/src/lang/: mod.rs
crates/qudit-circuit/src/lang/qasm2/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs  write.rs
crates/qudit-circuit/src/operation/: code.rs  directive.rs  expression.rs  kind.rs  mod.rs  operation.rs  set.rs  subcircuit.rs
crates/qudit-circuit/src/param/: argument.rs  list.rs  mod.rs  param.rs  vector.rs
crates/qudit-circuit/src/wire/: list.rs  location.rs  mod.rs  wire.rs
crates/qudit-core/: Cargo.toml
crates/qudit-core/benches/: common.rs  frpr.rs
crates/qudit-core/src/: function.rs  lib.rs  memory.rs  perm.rs  radices.rs  radix.rs  scalar.rs  system.rs
crates/qudit-core/src/accel/: frpr.rs  hadamard.rs  kron.rs  matmul.rs  mod.rs
crates/qudit-core/src/array/: mod.rs  symsq.rs  tensor.rs
crates/qudit-core/src/quantum/: ket.rs  mod.rs  state.rs  unitary.rs
crates/qudit-core/src/utils/: compact.rs  limited.rs  mod.rs  storage.rs
crates/qudit-expr/: Cargo.toml
crates/qudit-expr/benches/: cnotu3u3.rs
crates/qudit-expr/src/: cache.rs  index.rs  lib.rs  shape.rs  unitary.rs
crates/qudit-expr/src/analysis/: mod.rs
crates/qudit-expr/src/codegen/: builder.rs  builtins.rs  codegen.rs  mod.rs  module.rs
crates/qudit-expr/src/expressions/: base.rs  bra.rs  brasys.rs  complex.rs  generator.rs  isometry.rs  ket.rs  ketsys.rs  kraus.rs  mod.rs  named.rs  tensor.rs  unitary.rs  utrysys.rs
crates/qudit-expr/src/qgl/: expr.rs  lexer.rs  mod.rs  parser.rs
crates/qudit-inst/: Cargo.toml
crates/qudit-inst/benches/: common.rs  unitary.rs
crates/qudit-inst/src/: instantiater.rs  lib.rs  result.rs  target.rs
crates/qudit-inst/src/numerical/: function.rs  initializer.rs  instantiation.rs  minimizer.rs  mod.rs  problem.rs  result.rs  runner.rs
crates/qudit-inst/src/qfactor/: mod.rs
crates/qudit-macros/: Cargo.toml
crates/qudit-macros/src/: lib.rs
crates/qudit-macros/tests/: test1.rs
crates/qudit-python/: Cargo.toml  THIRD-PARTY-LICENSES.json  pyproject.toml
crates/qudit-python/openqudit/: __init__.py  __init__.pyi
crates/qudit-python/openqudit/circuit/: __init__.pyi
crates/qudit-python/openqudit/expressions/: __init__.pyi
crates/qudit-python/openqudit/instantiation/: __init__.pyi
crates/qudit-python/src/: lib.rs
crates/qudit-python/tests/: test_circuit_pickling.py  test_qasm2_lang.py
crates/qudit-tensor/: Cargo.toml
crates/qudit-tensor/src/: lib.rs
crates/qudit-tensor/src/bytecode/: buffer.rs  bytecode.rs  generator.rs  instruction.rs  mod.rs
crates/qudit-tensor/src/cpu/: buffer.rs  instruction.rs  mod.rs  result.rs  tnvm.rs
crates/qudit-tensor/src/network/: builder.rs  index.rs  mod.rs  network.rs  path.rs  tensor.rs
crates/qudit-tensor/src/tree/: fmt.rs  hadamard.rs  leaf.rs  matmul.rs  mod.rs  outer.rs  trace.rs  transpose.rs  tree.rs
qudit-circuit/: Cargo.toml
qudit-circuit/benches/: circuit_math.rs  circuit_struct.rs  common.rs  compact_vec_bench.rs  tnvm.rs
qudit-circuit/src/: circuit.rs  compact.rs  cycle.rs  cyclelist.rs  exprset.rs  instruction.rs  iterator.rs  lib.rs  location.rs  operation.rs  param.rs
qudit-circuit/src/cycle/: id.rs  list.rs
qudit-circuit/src/instruction/: instruction.rs
qudit-circuit/src/iterator/: iterator.rs  mod.rs
qudit-circuit/src/operation/: expression.rs  mod.rs  operation.rs  set.rs  subcircuit.rs
qudit-circuit/src/param/: argument.rs  list.rs  mod.rs  param.rs
qudit-circuit/src/utils/: compact.rs
qudit-circuit/src/wire/: list.rs  mod.rs  wire.rs
qudit-core/: Cargo.toml
qudit-core/benches/: frpr.rs
qudit-core/qudit-core-proc-macros/: Cargo.toml
qudit-core/src/: function.rs  lib.rs  memory.rs  perm.rs  radices.rs  radix.rs  scalar.rs  shape.rs  system.rs
qudit-core/src/accel/: frpr.rs  kron.rs  matmul.rs  mod.rs
qudit-core/src/array/: mod.rs  tensor.rs
qudit-core/src/matrix/: matmat.rs  matvec.rs  mod.rs
qudit-core/src/quantum/: ket.rs  mod.rs  state.rs  unitary.rs
qudit-core/src/state/: mod.rs  state.rs
qudit-core/src/unitary/: function.rs  matrix.rs  mod.rs
qudit-core/src/utils/: limited.rs
qudit-expr/: Cargo.toml
qudit-expr/src/: cache.rs  complex.rs  expression.rs  index.rs  lib.rs  shape.rs  tensor.rs  unitary.rs
qudit-expr/src/analysis/: mod.rs
qudit-expr/src/codegen/: builder.rs  codegen.rs  mod.rs  module.rs
qudit-expr/src/expressions/: base.rs  bra.rs  brasys.rs  complex.rs  isometry.rs  ket.rs  ketsys.rs  kraus.rs  mod.rs  named.rs  tensor.rs  unitary.rs  utrysys.rs
qudit-expr/src/qgl/: expr.rs  lexer.rs  mod.rs  parser.rs
qudit-inst/: Cargo.toml
qudit-inst/benches/: common.rs  unitary.rs
qudit-inst/src/: function.rs  instantiater.rs  lib.rs  minimizer.rs  result.rs  target.rs
qudit-inst/src/numerical/: function.rs  initializer.rs  instantiation.rs  minimizer.rs  mod.rs  problem.rs  result.rs  runner.rs  standard.rs  x0.rs
qudit-inst/src/numerical/functions/: hs.rs  mod.rs
qudit-inst/src/numerical/initializers/: greedy.rs  mod.rs  uniform.rs  zeros.rs
qudit-inst/src/numerical/minimizers/: lbfgs.rs  lm.rs
qudit-inst/src/numerical/runners/: mod.rs  multistart.rs
qudit-inst/src/qfactor/: mod.rs  qfactor.rs  unitary_builder.rs
qudit-macro/: Cargo.toml
qudit-macro/src/: lib.rs
qudit-macro/tests/: test1.rs
qudit-python/: Cargo.toml  Untitled.ipynb  pyproject.toml
qudit-python/src/: lib.rs
(+108 files in other folders)
