[workspace]
members = [
    "crates/qudit-core",
    "crates/qudit-expr",
    "crates/qudit-tensor",
    "crates/qudit-circuit",
    "crates/qudit-inst",
    "crates/qudit-python",
]

[workspace.dependencies]
num = "0.4.3"
nano-gemm = "0.1.2"
num-traits = "0.2"
num-complex = "0.4"
faer = "0.22.6"
faer-traits = "0.22.1"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
inventory = { version = "0.3.21" }
numpy = { version = "0.26.0" }
ndarray = { version = "*" }

[profile.dev]
opt-level = 2       # Optimize for speed-ish

[profile.release]
opt-level = 3       # Optimize for speed
lto = "fat"          # Link Time Optimization
codegen-units = 1   # Slower builds, potentially faster runtime
strip = true       # Strip debug symbols from release binary

[profile.bench]
inherits = "release"
strip = false
