[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[workspace.dependencies]

# Number
num = "0.4.3"
num-traits = "0.2"
num-complex = "0.4"
ordered-float = "5.1.0"

# Linalg
nano-gemm = "0.1.3"
faer = { version = "0.23.2", features = ["std", "rand"], default-features = false }
faer-traits = "0.23.2"

# Python Support
pyo3 = { version = "0.27.1", features = ["abi3-py39"] }
inventory = { version = "0.3.21" }
numpy = { version = "0.27.0" }
ndarray = { version = "0.16" }

# LLVM/Compilation
egg = "0.10.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
llvm-sys = "181.2.0"

# Data Structures
aligned-vec = "0.6.4"
bit-set = "0.8.0"
indexmap = "2.12.0"
rustc-hash = "2.1.1"
slotmap = "1.0.7"

# Utilities
bytemuck = "1.24.0"
coe-rs = "0.1.2"
dyn-clone = "1.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5"

# Owned Crates
qudit-macros = { path = "crates/qudit-macros", version = "0.1.0" }
qudit-core = { path = "crates/qudit-core", version = "0.1.0" }
qudit-expr = { path = "crates/qudit-expr", version = "0.1.0" }
qudit-tensor = { path = "crates/qudit-tensor", version = "0.1.0" }
qudit-circuit = { path = "crates/qudit-circuit", version = "0.1.0" }
qudit-inst = { path = "crates/qudit-inst", version = "0.1.0" }
qudit-python = { path = "crates/qudit-python", version = "0.1.0" }

# Testing
proptest = "1.9"

# Benchmarking
criterion = "0.7"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
strip = false

[workspace.lints.clippy]
too_many_arguments = "allow"
needless_range_loop = "allow"
missing_transmute_annotations = "allow"
upper_case_acronyms = "allow"
collapsible_if = "allow"
module_inception = "allow"
