[package]
name = "qudit-circuit"
version = "0.1.0"
edition = "2021"

[lib]
name = "qudit_circuit"
crate-type = ["cdylib", "rlib"]

[dependencies]
qudit-core = { path = "../qudit-core" }
qudit-gates = { path = "../qudit-gates" }
qudit-expr = { path = "../qudit-expr" }
qudit-tensor = { path = "../qudit-tensor" }
indexmap = "2.6"
itertools = "0.10"
num-traits = "0.2"
num-complex = "0.4"
faer = "0.22.6"
aligned-vec = "*"
bytemuck = "*"
anyhow = "*"
bit-set = "*"

[dev-dependencies]
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header","./.cargo/html/docs-header.html",
    "--html-before-content","./.cargo/html/docs-before-content.html"
]

[[bench]]
name = "circuit_struct"
harness = false

[[bench]]
name = "tnvm"
harness = false
