[package]
name = "qudit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.22.6"
faer-traits = "0.22.1"
aligned-vec = "0.6.1"
bytemuck = "1.21.0"
rand = "0.9.0"
num-traits = "0.2.19"
num = "0.4.3"
nano-gemm = "0.1.2"
coe-rs = "0.1.2"
bit-set = "*"
qudit-macro = {path = "../qudit-macro"}

[dev-dependencies]
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "frpr"
harness = false
