[package]
name = "qudit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = { workspace = true }
faer-traits = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
nano-gemm = { workspace = true }
aligned-vec = "0.6.1"
bytemuck = "1.21.0"
rand = "0.9.2"
coe-rs = "0.1.2"
bit-set = "0.8.0"
rand_distr = "0.5"
qudit-macros = {path = "../qudit-macros"}
pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
num-complex = { workspace = true }
numpy = { workspace = true }

[dev-dependencies]
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "frpr"
harness = false

[features]
python = ["dep:pyo3", "dep:inventory"]
