[package]
name = "qudit-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qudit-core = { path = "../qudit-core" }
num = "*"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
llvm-sys = { version = "181.2.0" }
coe-rs = "*"
egg = "*"
ordered-float = "*"
itertools = "*"
faer = "0.22.6"


rustc-hash = "*"
indexmap = "*"
rand = "*"


[dev-dependencies]
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "cnotu3u3"
harness = false
