[package]
name = "qudit-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qudit-core = { path = "../qudit-core" }
num = { workspace = true }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
llvm-sys = { version = "181.2.0" }
coe-rs = "0.1.2"
egg = "0.10.0"
ordered-float = "5.0.0"
itertools = "0.14.0"
faer = { workspace = true }
pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }


rustc-hash = "2.1.1"
indexmap = "2.11.1"
rand = "0.8.5"


[dev-dependencies]
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "cnotu3u3"
harness = false

[features]
python = ["qudit-core/python", "dep:numpy", "dep:ndarray", "dep:pyo3", "dep:inventory"]
llvm-static = ["llvm-sys/force-static"]
llvm-dynamic = ["llvm-sys/force-dynamic"]
