[package]
name = "qudit-inst"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = { level = "allow", priority = -1 }

[dependencies]
qudit-core = { path = "../qudit-core" }
qudit-expr = { path = "../qudit-expr" }
qudit-tensor = { path = "../qudit-tensor" }
qudit-circuit = { path = "../qudit-circuit" }
