[package]
name = "qudit-inst"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = { level = "allow", priority = -1 }

[dependencies]
qudit-core = { path = "../qudit-core" }
qudit-expr = { path = "../qudit-expr" }
qudit-tensor = { path = "../qudit-tensor" }
qudit-circuit = { path = "../qudit-circuit" }
num-complex = "0.4.6"
faer = "0.22.6"
faer-traits = "0.22.1"
rand = "0.8.5"

[dev-dependencies]
qudit-gates = { path = "../qudit-gates" }
proptest = "1.2"
criterion = "0.5"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "unitary"
harness = false
