[package]
name = "qudit-macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "qudit_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"
faer = "0.22.6"
faer-traits = "0.22.1"
coe-rs = "0.1.2"
num-complex = "*"