[package]
name = "qudit-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "openqudit"
crate-type = ["cdylib"]

[dependencies]
qudit-core = { path = "../qudit-core", features = ["python"] }
qudit-expr = { path = "../qudit-expr" }
qudit-gates = { path = "../qudit-gates" }
qudit-circuit = { path = "../qudit-circuit", features = ["python"] }
pyo3 = { workspace = true }
inventory = { workspace = true }
numpy = "0.26.0"
ndarray = "*"
