[package]
name = "qudit-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "openqudit"
crate-type = ["cdylib"]

[dependencies]
qudit-core = { path = "../qudit-core", features = ["python"] }
qudit-expr = { path = "../qudit-expr", features = ["python"] }
qudit-circuit = { path = "../qudit-circuit", features = ["python"] }
qudit-inst = { path = "../qudit-inst/", features = ["python"] }
pyo3 = { workspace = true }
inventory = { workspace = true }
numpy = { workspace = true }
ndarray = "*"
