[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "openqudit"
version = "0.1.1"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.cibuildwheel]
build = "cp39-*"
# container-engine = "podman"
skip = "*musllinux*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y llvm-devel-18.1.8-3.module_el8.10.0+3903+ca21d481 libffi-devel ncurses-devel"

[tool.cibuildwheel.macos]
before-all = """
    brew install llvm@18
    export PATH="$(brew --prefix llvm@18)/bin:$PATH"
"""

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
archs = ["auto64"]
before-all = """
    set "LLVM_VERSION=18.1.8"
    set "LLVM_INSTALL_DIR=%GITHUB_WORKSPACE%\\llvm-install"
    set "LLVM_URL=https://github.com/llvm/llvm-project/releases/download/llvmorg-%LLVM_VERSION%/clang+llvm-%LLVM_VERSION%-x86_64-pc-windows-msvc.tar.xz"
    set "LLVM_ARCHIVE=llvm.tar.xz"

    echo "Downloading LLVM from %LLVM_URL%"
    curl -L -o %LLVM_ARCHIVE% %LLVM_URL%

    echo "Extracting to %LLVM_INSTALL_DIR%"
    mkdir %LLVM_INSTALL_DIR%
    7z x %LLVM_ARCHIVE% -so | 7z x -si -ttar -o"%LLVM_INSTALL_DIR%"

    echo "Finding extracted directory..."
    FOR /D %%i IN ("%LLVM_INSTALL_DIR%\\*") DO set "LLVM_SUBDIR=%%i"

    echo "Setting LLVM_DIR to %LLVM_SUBDIR%"
    set "LLVM_DIR=%LLVM_SUBDIR%"

    echo "Setting LLVM_SYS_181_PREFIX to %LLVM_SUBDIR%"
    set "LLVM_SYS_181_PREFIX=%LLVM_SUBDIR%"

    echo "Adding %LLVM_SUBDIR%\\bin to PATH"
    set "PATH=%LLVM_SUBDIR%\\bin;%PATH%"
"""

