[package]
name = "qudit-circuit"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }


[dependencies]
qudit-core = { workspace = true }
qudit-expr = { workspace = true }
qudit-tensor = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
faer = { workspace = true }
pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
bit-set = { workspace = true }
slotmap = { workspace = true }
rustc-hash = { workspace = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }
rand = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header","./.cargo/html/docs-header.html",
    "--html-before-content","./.cargo/html/docs-before-content.html"
]

[[bench]]
name = "circuit_struct"
harness = false

[[bench]]
name = "tnvm"
harness = false

[[bench]]
name = "compact_vec_bench"
harness = false

[features]
python = ["qudit-core/python", "qudit-expr/python", "dep:ndarray", "dep:numpy", "dep:pyo3", "dep:inventory"]
