[package]
name = "qudit-circuit"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = [
  "--html-in-header",
  "./.cargo/html/docs-header.html",
  "--html-before-content",
  "./.cargo/html/docs-before-content.html"
]

[[bench]]
harness = false
name = "circuit_struct"

[[bench]]
harness = false
name = "tnvm"

[dependencies]
aligned-vec = { workspace = true }
bit-set = { workspace = true }
bytemuck = { workspace = true }
faer = { workspace = true }
indexmap = { workspace = true }
inventory = { workspace = true, optional = true }
itertools = { workspace = true }
num = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
qudit-core = { workspace = true }
qudit-expr = { workspace = true }
qudit-tensor = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pprof = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
python = [
  "dep:inventory",
  "dep:numpy",
  "dep:pyo3",
  "dep:pyo3-stub-gen",
  "qudit-core/python",
  "qudit-expr/python"
]

[lints]
workspace = true
