[package]
name = "qudit-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true } 
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
faer = { workspace = true }
faer-traits = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
nano-gemm = { workspace = true }
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
coe-rs = { workspace = true }
bit-set = { workspace = true }
rand_distr = { workspace = true }
num-complex = { workspace = true }

# python
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }
qudit-macros = { workspace = true }

[[bench]]
name = "frpr"
harness = false

[features]
python = ["dep:pyo3", "dep:inventory", "dep:numpy"]

[lints]
workspace = true
