[package]
name = "qudit-expr"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }


[dependencies]
qudit-core = { workspace = true }
num = { workspace = true }
inkwell = { workspace = true }
llvm-sys = { workspace = true }
coe-rs = { workspace = true }
egg = { workspace = true }
ordered-float = { workspace = true }
itertools = { workspace = true }
faer = { workspace = true }
pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }


[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }


[[bench]]
name = "cnotu3u3"
harness = false


[features]
python = ["qudit-core/python", "dep:numpy", "dep:ndarray", "dep:pyo3", "dep:inventory"]
llvm-static = ["llvm-sys/force-static"]
llvm-dynamic = ["llvm-sys/force-dynamic"]
