[package]
name = "qudit-inst"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints.rust]
unused = { level = "allow", priority = -1 }

[dependencies]
qudit-core = { workspace = true }
qudit-expr = { workspace = true }
qudit-tensor = { workspace = true }
qudit-circuit = { workspace = true }
num-complex = { workspace = true }
faer = { workspace = true }
faer-traits = { workspace = true }
rand = { workspace = true }
dyn-clone = { workspace = true }

pyo3 = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }

[[bench]]
name = "unitary"
harness = false

[features]
python = ["qudit-core/python", "qudit-expr/python", "qudit-circuit/python", "dep:ndarray", "dep:numpy", "dep:pyo3", "dep:inventory"]

