[package]
name = "qudit-macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true } 
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[lib]
name = "qudit_macros"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
num-complex = { workspace = true }

# [dev-dependencies]
# qudit-core = { workspace = true }
