[package]
name = "qudit-python"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "openqudit"
crate-type = ["cdylib"]

[dependencies]
qudit-core = { path = "../qudit-core", features = ["python"] }
qudit-expr = { path = "../qudit-expr", features = ["python"] }
qudit-circuit = { path = "../qudit-circuit", features = ["python"] }
qudit-inst = { path = "../qudit-inst/", features = ["python"] }

pyo3 = { workspace = true }
inventory = { workspace = true }
numpy = { workspace = true }
ndarray = "*"

[target.'cfg(target_vendor = "apple")'.dependencies]
zstd = "0.13"

[features]
dynamic = ["qudit-expr/llvm-dynamic"]
