[package]
name = "qudit-python"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "openqudit"
crate-type = ["cdylib"]

[dependencies]
qudit-core = { workspace = true, features = ["python"] }
qudit-expr = { workspace = true, features = ["python"] }
qudit-circuit = { workspace = true, features = ["python"] }
qudit-inst = { workspace = true, features = ["python"] }

pyo3 = { workspace = true }
inventory = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
zstd = "0.13"

[features]
dynamic = ["qudit-expr/llvm-dynamic"]
