[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "openqudit"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
    "THIRD-PARTY-LICENSES.json"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=2"
]
dynamic = ['version']

[tool.cibuildwheel]
build = "cp39-*"
container-engine = "podman"
skip = "*musllinux*"
test-sources = ['.github/test.py']
test-command = 'python .github/test.py'

[tool.cibuildwheel.environment]
PYO3_BUILD_EXTENSION_MODULE = "True"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y llvm-devel-18.1.8-3.module_el8.10.0+3903+ca21d481 libffi-devel ncurses-devel"

[tool.cibuildwheel.linux.config-settings]
build-args = "--features dynamic"

[tool.cibuildwheel.macos]
before-all = """
    brew install llvm@18
    export PATH="$(brew --prefix llvm@18)/bin:$PATH"
    rm $(brew --prefix llvm@18)/lib/libunwind.dylib
"""

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
archs = ["auto64"]
environment = { LIB='D:\\a\\OpenQudit\\OpenQudit\\vcpkg\\installed\\x64-windows-static\\lib\\;$LIB' }

# Run delvewheel
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

