[package]
name = "qudit-tensor"
version = { workspace = true }
# edition = { workspace = true }
edition = "2021"
license = { workspace = true }

# [lints.rust]
# unused = { level = "allow", priority = -1 }

[dependencies]
qudit-core = { workspace = true }
qudit-expr = { workspace = true }
bit-set = { workspace = true }
faer = { workspace = true }
