[package]
name = "qudit-tensor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true } 
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
qudit-core = { workspace = true }
qudit-expr = { workspace = true }
bit-set = { workspace = true }
faer = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
